# This is a combination of 2 commits. # This is the 1st commit message:
Added vehicle service layer, added admin server vehicle feature, added
login and admin page security filter, improved RentalServlet code

# This is the commit message #2:

cleanup

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -10,14 +10,18 @@
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
   
-    <error-page>
+  <error-page>
   	<error-code>500</error-code>
-  	<location>/Error.jsp</location>
+  	<location>/error.jsp</location>
   </error-page>
   
   <error-page>
   	<error-code>404</error-code>
-  	<location>/Missing.jsp</location>
+  	<location>/missing.jsp</location>
+  </error-page>
+  <error-page>
+  	<error-code>401</error-code>
+  	<location>/unauthorized.jsp</location>
   </error-page>
   
 </web-app>
